# kk-music-player

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: BuildRelease.yml
kk-app/: CMakeLists.txt
kk-app/include/: kmp_app.hpp  kmp_common.hpp  kmp_defines.hpp  kmp_vulkan_init.hpp  music_player.hpp
kk-app/include/lrc/: LrcSpec.h  LrcTag.h  Lyrics.h
kk-app/include/ui/: MusicWindow.hpp
kk-app/src/: kk.ixx  kmp_app.cpp  kmp_vulkan_init.cpp  main.cpp  music_player.cpp
kk-app/src/lrc/: LrcSpec.cpp  LrcTag.cpp  Lyrics.cpp
kk-app/src/ui/: MusicWindow.cpp
